--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     box-sizing: border-box;
 }
 
-form {
+.form1 {
     width: 500px;
 	border: 2px solid #ccc;
 	box-shadow: 0 0 1px rgba(255,255,255,1), 0 0 8px rgba(255,255,255,1), 0 0 20px #6bb8ff, 0 0 15px #98e2ff;
@@ -22,6 +22,16 @@ form {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 190px;
     height: 900px;
+}
+.form2 {
+    width: 500px;
+	border: 2px solid #ccc;
+	box-shadow: 0 0 1px rgba(255,255,255,1), 0 0 8px rgba(255,255,255,1), 0 0 20px #6bb8ff, 0 0 15px #98e2ff;
+	padding: 30px;
+	background: transparent;
+	border-radius: 15px;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 210px;
 }
 
 input {
@@ -53,7 +63,7 @@ h2 {
     margin-top: 20px;
 }
 
-#ex {
+.ex {
     color: white;
     margin-top: 10px;
     text-transform: capitalize;
@@ -72,10 +82,11 @@ h2 {
     background: rgb(47, 165, 173);
 }
 
-#login {
+.login {
     text-decoration: none;
     color: yellowgreen;
 }
-#login:hover {
+.login:hover {
     text-decoration: underline;
+    color: yellowgreen;
 }
